[gd_scene load_steps=50 format=2]

[ext_resource path="res://Sprites/characters/Wizard Pack/Run.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/characters/Wizard Pack/Fall.png" type="Texture" id=3]
[ext_resource path="res://Sprites/characters/Wizard Pack/Death.png" type="Texture" id=4]
[ext_resource path="res://Sprites/characters/Wizard Pack/Jump.png" type="Texture" id=5]
[ext_resource path="res://Sprites/characters/Wizard Pack/Attack2.png" type="Texture" id=10]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/ScoreCount.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/Laser_Shoot.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/collect_sound.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/PlayerDie.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/PlayerDamage.wav" type="AudioStream" id=17]
[ext_resource path="res://Scenes/GameOver.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/DebugInterface.tscn" type="PackedScene" id=19]
[ext_resource path="res://Sprites/joystick.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Pause/pause_button.png" type="Texture" id=21]
[ext_resource path="res://Sprites/shoot.png" type="Texture" id=22]
[ext_resource path="res://Sprites/characters/Wizard Pack/Idle.png" type="Texture" id=23]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 23 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 23 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 23 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 23 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
radius = 8.0
height = 8.0

[sub_resource type="Animation" id=27]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.286275, 0.968627, 0.0117647, 1 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.0117647, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=29]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=30]
length = 0.2

[node name="Player" type="KinematicBody2D" groups=[
"save",
]]
position = Vector2( 35.5964, 12.0207 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -52.0247 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.529732, 0.529732 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
frames = SubResource( 25 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.165, 2.317 )
shape = SubResource( 26 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 18.2286, -2.91465 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -740
limit_right = 1605
limit_bottom = 170
smoothing_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 3.98043, -2.06407 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="HealthBar" parent="." instance=ExtResource( 11 )]
margin_left = -10.9655
margin_top = -16.202
margin_right = 64.0345
margin_bottom = 25.798
rect_scale = Vector2( 0.08, 0.1 )

[node name="InvulnerabillityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Poison = SubResource( 27 )
anims/damage = SubResource( 28 )
anims/flash = SubResource( 29 )
anims/rest = SubResource( 30 )

[node name="ScoreCount" parent="." instance=ExtResource( 12 )]

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -15.0

[node name="Collect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -15.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 18 )]
visible = false
margin_left = -0.166611
margin_top = -1.60331
margin_right = -0.166626
margin_bottom = -1.6033

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="DebugInterface" parent="CanvasLayer2" instance=ExtResource( 19 )]
visible = false
margin_left = 97.0
margin_top = -35.0
margin_right = 231.0
margin_bottom = 41.0

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="jump" type="TouchScreenButton" parent="CanvasLayer3"]
visible = false
position = Vector2( 30.7037, 118.82 )
scale = Vector2( 0.08, 0.08 )
normal = ExtResource( 20 )
action = "jump"

[node name="right" type="TouchScreenButton" parent="CanvasLayer3"]
visible = false
position = Vector2( 77.0181, 143.257 )
rotation = 1.5708
scale = Vector2( 0.08, 0.08 )
normal = ExtResource( 20 )
action = "moveRight"

[node name="left" type="TouchScreenButton" parent="CanvasLayer3"]
visible = false
position = Vector2( 8.65724, 166.599 )
rotation = -1.5708
scale = Vector2( 0.08, 0.08 )
normal = ExtResource( 20 )
action = "moveLeft"

[node name="Pause" type="TouchScreenButton" parent="CanvasLayer3"]
visible = false
position = Vector2( 285, 0 )
scale = Vector2( 0.05, 0.05 )
normal = ExtResource( 21 )
action = "Pause"

[node name="Shoot2" type="TouchScreenButton" parent="CanvasLayer3"]
visible = false
position = Vector2( 260.498, 89.8897 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 22 )
action = "shoot"

[node name="sprint" type="TouchScreenButton" parent="CanvasLayer3"]
visible = false
position = Vector2( 297.339, 149.564 )
rotation = 1.5708
scale = Vector2( 0.08, 0.08 )
normal = ExtResource( 20 )
action = "sprint"
[connection signal="healt_updated" from="." to="HealthBar" method="_on_Player_healt_updated"]
[connection signal="max_health" from="." to="HealthBar" method="_on_Player_max_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InvulnerabillityTimer" to="." method="_on_InvulnerabillityTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="fade_finished" from="CanvasLayer/GameOver" to="." method="_on_GameOver_fade_finished"]
[connection signal="pressed" from="CanvasLayer3/jump" to="." method="_on_jump_pressed"]
[connection signal="pressed" from="CanvasLayer3/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="CanvasLayer3/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer3/Shoot2" to="." method="_on_Shoot2_pressed"]
[connection signal="released" from="CanvasLayer3/Shoot2" to="." method="_on_Shoot2_released"]
